# lab2_2ndsem

./: .gitignore  CMakeLists.txt
headers/: array_sequence.hpp  dynamic_array.hpp  linked_list.hpp  list_sequence.hpp  sequence.hpp  ui.hpp
sources/: lab2.cpp  ui.cpp
templates/: array_sequence.tpp  dynamic_array.tpp  linked_list.tpp  list_sequence.tpp
tests/: array_sequence.cpp  array_sequence.inc  dynamic_array.cpp  dynamic_array.inc  linked_list.cpp  linked_list.inc  list_sequence.cpp  list_sequence.inc  main_tests.cpp  test_array_sequence.cpp  test_dynamic_array.cpp  test_linked_list.cpp  test_list_sequence.cpp
